Change variable names + Fix switches (quantile, func) + Quantile verification included for func mode